Advent 2024: improving code quality and removing errors from cherrypick